hard-gists/4ee0a712454480df5ee3/run.log
=== Docker Run Log for 4ee0a712454480df5ee3 ===
Started at: Mi 29. Okt 15:13:29 CET 2025

[2025-10-29 15:13:30] START: Running container for 4ee0a712454480df5ee3
[2025-10-29 15:13:30] SUCCESS: Container b9821308383708f3592649cb4fa223fad506f490816b60505b196af39d41a422 started for 4ee0a712454480df5ee3
=== Container logs for 4ee0a712454480df5ee3 ===
  File "/snippet.py", line 140
    print i
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4ee0a712454480df5ee3 ===
[2025-10-29 15:13:32] INFO: Container b9821308383708f3592649cb4fa223fad506f490816b60505b196af39d41a422 has stopped
